tinyc/test/bad/void-as-bool-neg.c
void v() {}

int main()
{
    !v();
    return 0;
}
